fix(Header): improve wrapping for long application names

--- a/@udir-design/react/src/components/header/header.css
+++ b/@udir-design/react/src/components/header/header.css
@@ -16,7 +16,7 @@
   > div {
     display: flex;
     height: 100%;
-    gap: var(--ds-size-8);
+    gap: var(--ds-size-4);
     align-content: center;
     justify-content: space-between;
     max-width: var(--udsc-header-max-width, 80rem);
@@ -33,6 +33,8 @@
     gap: var(--ds-size-3);
     text-decoration: none;
     color: var(--dsc-link-color);
+    text-wrap: pretty;
+    overflow-wrap: break-word;
 
     @composes ds-focus from '@digdir/designsystemet-css/base.css';
   }
@@ -41,7 +43,7 @@
     display: flex;
     gap: var(--ds-size-8);
     align-items: center;
-    width: 100%;
+    flex-grow: 1;
     justify-content: flex-end;
 
     > .ds-tag {
